--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta property="og:title" content="My GitHub Portfolio" />
     <meta property="og:type" content="website" />
+    <meta http-equiv="Refresh" content="2; url=public/index.html">
     <meta
       property="og:description"
       content="Built with React and the GitHub REST API."
