--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="description" content=" Mon site portfolio, celui sur lequel vous naviguez actuellement, où j'expose toutes les compétences que j'ai acquis durant ma formation ainsi que les différents projets sur lesquels j'ai travaillé.">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
